--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -1,2 +1,9 @@
 @import "./vendors/bootstrap.scss";
 @import "./vendors/loading-overlay.scss";
+
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .3s ease;
+  }
+  .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+  }
